--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;300;400;500;600;700&display=swap");
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -9,9 +11,39 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-family: "Josefin Sans", sans-serif;
+  background-color: #ccc;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.custom-radio {
+  width: 10px;
+  height: 10px;
+}
+
+.custom-radio > div {
+  box-shadow: 0 0 0 5px white;
+}
+
+.custom-radio input:checked + div {
+  @apply bg-blue-500;
+  box-shadow: 0 0 0 2.5px white,
+    0 0 0 5px rgb(59 130 246 / var(--tw-bg-opacity));
+}
+
+.custom-checkbox {
+  width: 20px;
+  height: 20px;
+}
+
+.custom-checkbox input:checked + div {
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
+}
+
+/* .custom-checkbox > div {
+  box-shadow: 0 0 0 10px white;
+} */
