--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-family: "Josefin Sans", sans-serif;
-  background-color: #ccc;
+  /* background-color: #ccc; */
 }
 
 code {
